fix css on navbar spacing for live

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -7,6 +7,8 @@
   margin-top: 10px;
 }
 
-.navbar .container {
+.nav-width {
     width: 900px;
+    margin-right: auto;
+    margin-left: auto;
 }
